--- a/app/index.html
+++ b/app/index.html
@@ -99,8 +99,8 @@
 
   <div id="features" class="page-section page-section--blue">
     <div class="wrapper">
-      <img src="assets/images/icons/star.svg">
-      <h2>Our Features</h2>
+      
+      <h2 class="section-title"><img class="section-title--icon" src="assets/images/icons/star.svg">Our <strong>Features</strong></h2>
 
       <img src="assets/images/icons/rain.svg">
       <h3>We&rsquo;ll Watch the Weather</h3>
@@ -158,3 +158,5 @@
 </body>
 
 </html>
+
+<!-- video 27 apply -->
