--- a/app/index.html
+++ b/app/index.html
@@ -137,31 +137,62 @@
       </div>
     </div>
   </div>
-  <div id="testimonials" class="page-section">
-    <img src="assets/images/icons/comment.svg">
-    <h2>Real Testimonials</h2>
+  <div id="testimonials" class="page-section page-section--no-bottom-padding page-section--testimonials">
+    <div class="wrapper wrapper--no-padding-until-4-of-12">
 
-    <img src="assets/images/testimonial-jane.jpg">
-    <h3>Jane Doe</h3>
-    <h3>9 Time Escaper</h3>
-    <p>&ldquo;Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-      Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-      Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore
-      magna aliqua.&rdquo;</p>
+      <h2 class="section--title section--title-blue"><img class="section--title--icon" src="assets/images/icons/comment.svg">Real<strong>
+          Testimonials</strong></h2>
 
-    <img src="assets/images/testimonial-john.jpg">
-    <h3>John Smith</h3>
-    <h3>4 Time Escaper</h3>
-    <p>&ldquo;Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-      Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-      Lorem ipsum dolor sit amet, consectetur.&rdquo;</p>
-
-    <img src="assets/images/testimonial-cat.jpg">
-    <h3>Cat McKitty</h3>
-    <h3>6 Time Escaper</h3>
-    <p>&ldquo;Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-      Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-      Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut.&rdquo;</p>
+      <div class="row row--gutters row--gutters--small row__equal-height-4-of-12 row__padding-t generic-content-container">
+        <div class="row__4-of-12">
+          <div class="testimonials">
+            <div class="testimonials__photo">
+              <img src="assets/images/testimonial-jane.jpg">
+            </div>
+            <h3 class="testimonials__title">Jane Doe</h3>
+            <h4 class="testimonials__subtitle">9 Time Escaper</h3>
+              <p class="testimonials__description">&ldquo;Duis aute irure dolor in reprehenderit in voluptate velit
+                esse cillum dolore eu fugiat nulla
+                pariatur.
+                Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est
+                laborum.
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et
+                dolore
+                magna aliqua.&rdquo;</p>
+          </div>
+        </div>
+        <div class="row__4-of-12">
+          <div class="testimonials">
+            <div class="testimonials__photo">
+              <img src="assets/images/testimonial-john.jpg">
+            </div>
+            <h3 class="testimonials__title">John Smith</h3>
+            <h4 class="testimonials__subtitle">4 Time Escaper</h3>
+              <p class="testimonials__description">&ldquo;Duis aute irure dolor in reprehenderit in voluptate velit
+                esse cillum dolore eu fugiat nulla
+                pariatur.
+                Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est
+                laborum.
+                Lorem ipsum dolor sit amet, consectetur.&rdquo;</p>
+          </div>
+        </div>
+        <div class="row__4-of-12">
+          <div class="testimonials testimonials--last">
+            <div class="testimonials__photo">
+              <img src="assets/images/testimonial-cat.jpg">
+            </div>
+            <h3 class="testimonials__title">Cat McKitty</h3>
+            <h4 class="testimonials__subtitle">6 Time Escaper</h4>
+            <p class="testimonials__description">&ldquo;Duis aute irure dolor in reprehenderit in voluptate velit esse
+              cillum dolore eu fugiat nulla
+              pariatur.
+              Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est
+              laborum.
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut.&rdquo;</p>
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
 
   <footer>
