--- a/app/index.html
+++ b/app/index.html
@@ -195,8 +195,10 @@
     </div>
   </div>
 
-  <footer>
-    <p>Copyright &copy; 2016 Clear View Escapes. All rights reserved. <a class="btn btn--orange" href="#">Get in Touch</a></p>
+  <footer class="footer">
+    <div class="wrapper">
+      <p><span class="footer__text">Copyright &copy; 2016 Clear View Escapes. All rights reserved. </span><a class="btn btn--orange" href="#">Get in Touch</a></p> 
+    </div>
   </footer>
 </body>
 
