--- a/app/index.html
+++ b/app/index.html
@@ -14,14 +14,17 @@
   <header class="header">
     <div class="wrapper">
       <div class="header__logo"><img class="" src="assets/images/icons/clear-view-escapes.svg"></div>
-      <div class="header__btn-container"><a class="btn" href="#">Get in Touch</a></div>
-      <nav class="primary-nav primary-nav--pull-right">
-        <ul>
-          <li><a href="#our-beginning">Our Beginning</a></li>
-          <li><a href="#features">Features</a></li>
-          <li><a href="#testimonials">Testimonials</a></li>
-        </ul>
-      </nav>
+      <div class="header__menu-icon"></div>
+      <div class="header__menu-content">
+        <div class="header__btn-container"><a class="btn" href="#">Get in Touch</a></div>
+        <nav class="primary-nav primary-nav--pull-right">
+          <ul>
+            <li><a href="#our-beginning">Our Beginning</a></li>
+            <li><a href="#features">Features</a></li>
+            <li><a href="#testimonials">Testimonials</a></li>
+          </ul>
+        </nav>  
+      </div>
     </div>
   </header>
 
