Webpack added:do some testing.

--- a/app/index.html
+++ b/app/index.html
@@ -205,8 +205,7 @@
       <p><span class="footer__text">Copyright &copy; 2016 Clear View Escapes. All rights reserved. </span><a class="btn btn--orange" href="#">Get in Touch</a></p> 
     </div>
   </footer>
+  <script src="temp/scripts/App-Bundle.js"></script>
 </body>
-
 </html>
 
-<!-- video 27 apply -->
