--- a/app/index.html
+++ b/app/index.html
@@ -104,7 +104,7 @@
 
   <div id="features" class="page-section page-section--blue">
     <div class="wrapper">
-      <h2 class="section--title"><img class="section--title--icon" src="assets/images/icons/star.svg">Our
+      <h2 class="section--title section--title-head"><img class="section--title--icon" src="assets/images/icons/star.svg">Our
         <strong>Features</strong></h2>
       <div class="row row--gutters-large generic-content-container">
         <div class="row__6-of-12">
