Small Screen: menu navigation design done.

--- a/app/index.html
+++ b/app/index.html
@@ -14,7 +14,9 @@
   <header class="header">
     <div class="wrapper">
       <div class="header__logo"><img class="" src="assets/images/icons/clear-view-escapes.svg"></div>
-      <div class="header__menu-icon"></div>
+      <div class="header__menu-icon">
+        <div class="header__menu-icon__middle"></div>
+      </div>
       <div class="header__menu-content">
         <div class="header__btn-container"><a class="btn" href="#">Get in Touch</a></div>
         <nav class="primary-nav primary-nav--pull-right">
