--- a/app/index.html
+++ b/app/index.html
@@ -21,9 +21,9 @@
         <div class="header__btn-container"><a class="btn" href="#">Get in Touch</a></div>
         <nav class="primary-nav primary-nav--pull-right">
           <ul>
-            <li><a href="#our-beginning">Our Beginning</a></li>
-            <li><a href="#features">Features</a></li>
-            <li><a href="#testimonials">Testimonials</a></li>
+            <li><a href="#our-beginning" id="our-beginning-link">Our Beginning</a></li>
+            <li><a href="#features" id="features-link">Features</a></li>
+            <li><a href="#testimonials" id="testimonials-link">Testimonials</a></li>
           </ul>
         </nav>  
       </div>
@@ -50,7 +50,7 @@
     </div>
   </div>
 
-  <div id="our-beginning" class="page-section">
+  <div id="our-beginning" class="page-section" data-matching-link="our-beginning-link">
     <div class="wrapper">
       <h2 class="headline headline--h2 headline--center headline--light headline--b-margin-small">The first trip we
         planned <strong>was our own</strong>.</h2>
@@ -104,7 +104,7 @@
     </div>
   </div>
 
-  <div id="features" class="page-section page-section--blue">
+  <div id="features" class="page-section page-section--blue" data-matching-link="features-link">
     <div class="wrapper">
       <h2 class="section--title section--title-head"><img class="section--title--icon" src="assets/images/icons/star.svg">Our
         <strong>Features</strong></h2>
@@ -144,7 +144,7 @@
       </div>
     </div>
   </div>
-  <div id="testimonials" class="page-section page-section--no-bottom-padding page-section--testimonials">
+  <div id="testimonials" class="page-section page-section--no-bottom-padding page-section--testimonials" data-matching-link="testimonials-link">
     <div class="wrapper wrapper--no-padding-until-4-of-12">
 
       <h2 class="section--title section--title-blue"><img class="section--title--icon" src="assets/images/icons/comment.svg">Real<strong>
