added model to 'Get in Touch' link

--- a/app/index.html
+++ b/app/index.html
@@ -18,7 +18,7 @@
         <div class="header__menu-icon__middle"></div>
       </div>
       <div class="header__menu-content">
-        <div class="header__btn-container"><a class="btn" href="#">Get in Touch</a></div>
+        <div class="header__btn-container"><a class="btn open-model" href="#">Get in Touch</a></div>
         <nav class="primary-nav primary-nav--pull-right">
           <ul>
             <li><a href="#our-beginning" id="our-beginning-link">Our Beginning</a></li>
@@ -204,9 +204,25 @@
 
   <footer class="footer">
     <div class="wrapper">
-      <p><span class="footer__text">Copyright &copy; 2016 Clear View Escapes. All rights reserved. </span><a class="btn btn--orange" href="#">Get in Touch</a></p> 
+      <p><span class="footer__text">Copyright &copy; 2016 Clear View Escapes. All rights reserved. </span><a class="btn btn--orange open-model" href="#" >Get in Touch</a></p> 
     </div>
   </footer>
+  <div class="model">
+    <h2 class="section--title section--title-blue section--title--less-margin"><img class="section--title--icon" src="assets/images/icons/mail.svg">Get in<strong>
+      Touch</strong></h2>
+    <div class="wrapper wrapper--narrow">
+      <p class="model__description">
+        We will have online order system in place soon. Until then, connect with us on any of platforms below. 
+      </p>      
+    </div>
+    <div class="social-icons">
+      <a href="#" class="social-icons__icon"><img  src="assets/images/icons/facebook.svg"></a>
+      <a href="#" class="social-icons__icon"><img  src="assets/images/icons/twitter.svg"></a>
+      <a href="#" class="social-icons__icon"><img  src="assets/images/icons/instagram.svg"></a>
+      <a href="#" class="social-icons__icon"><img  src="assets/images/icons/youtube.svg"></a>
+    </div> 
+    <div class="model__close">X</div> 
+  </div>
   <script src="temp/scripts/App-Bundle.js"></script>
 </body>
 </html>
